--- a/client/src/css/Services.css
+++ b/client/src/css/Services.css
@@ -1,7 +1,6 @@
 
 #service-intro {
-    /* height: 75vh;
-    height: 85vh; */
+    
     height: 735px;
     width: 100%;
     display: flex;
@@ -175,23 +174,6 @@
     animation-iteration-count: calc(10);
     animation-name: mow-lawn;
 
-
-    /* display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: -245%;
-    left: 0%;
-    height: 300%;
-    width: 50%;
-    background-color: rgba(0, 0, 0, 0);
-    background-image: url("../images/orange_mower2.png");
-    background-size: cover;
-    animation-duration: 15s;
-    border: 1px solid black; */
-        
-
-
 }
 
 @keyframes mow-lawn {
@@ -205,54 +187,7 @@
         
     }
 
-    /* 99.9% {
-        
-        
- 
-    } */
-
-    /* 10% {
-        left: 10%;
-    }
-
-    20% {
-        left: 20%;
-    }
-
-    30% {
-        left: 30%;
-    }
-
-    40% {
-        left: 40%;
-    }
-
-    50% {
-        left: 50%;
-    }
-
-    60% {
-        left: 60%;
-    }
-
-    70% {
-        left: 70%;
-    }
-
-    80% {
-        left: 80%;
-    }
-
-    90% {
-        left: 90%;
-    }
-
-    100% {
-        left: 100%;
-    } */
-
     to {
-        /* transform: rotateY(180deg); */
         left: 0%;
         transform: rotateY(180deg)
     }
@@ -728,7 +663,7 @@
         align-items: center;
     
         background-color: rgb(253, 253, 213);
-        background-color: purple;
+        /* background-color: purple; */
     }
 
     #service-images {
@@ -1087,10 +1022,7 @@
 @media (min-width: 601px) {
 
     #service-intro {
-        
-        background-color: yellow;
-        
-    
+        /* background-color: yellow; */
     }
 
     #service-space-1 {
@@ -1193,7 +1125,7 @@
         flex-direction: column;
         align-items: center;
         background-color: rgb(253, 253, 213);
-        background-color: aqua;
+        /* background-color: aqua; */
         
     
     }
@@ -1423,9 +1355,8 @@
         flex-direction: column;
         align-items: center;
         background-color: rgb(253, 253, 213);
-        background-color: blueviolet;
+        /* background-color: blueviolet; */
             
-    
     }
 
     #service-images {
@@ -1581,19 +1512,10 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-    
-        /* if would like to use services images remove the justify center below*/
-    
-        /* justify-content: center; */
         align-items: center;
-    
-    
-        /* background-color: rgb(216, 255, 215); */
-        /* background-color: rgb(233, 214, 152); */
-        /* background-color: rgb(224, 183, 94); */
         background-color: rgb(253, 253, 213);
         
-        background-color: rgb(192, 123, 33);
+        /* background-color: rgb(192, 123, 33); */
         
     
     }
@@ -2019,22 +1941,7 @@
         animation-name: growTree;
     }
     
-    @keyframes growTree {
-        /* from {
-            background-image: url("../images/growing_tree_1.5.png");
-            background-size: cover;
-        }
-    
-        50% {
-            background-image: url("../images/growing_tree_2.5.png");
-            background-size: cover;
-        }
-    
-        to {
-            background-image: url("../images/growing_tree_4.5.png");
-            background-size: cover;
-        } */
-    
+    @keyframes growTree {    
         10% {
             background-image: url("../images/growing_tree_1.5.png");
     
@@ -2280,22 +2187,12 @@
         height: 85vh;
         height: 630px;
         
-        /* height: 832px; */
         width: 100%;
         display: flex;
         flex-direction: column;
-    
-        /* if would like to use services images remove the justify center below*/
-    
-        /* justify-content: center; */
         align-items: center;
-    
-    
-        /* background-color: rgb(216, 255, 215); */
-        /* background-color: rgb(233, 214, 152); */
-        /* background-color: rgb(224, 183, 94); */
         background-color: rgb(253, 253, 213);
-        background-color: aquamarine;
+        /* background-color: aquamarine; */
     
     }
 
@@ -2303,18 +2200,7 @@
         display: flex;
         justify-content: center;
         align-items: flex-start;
-        justify-content: space-evenly;
-        /* height: 20%;
-        width: 100%;
-
-        padding-top: 0%;
-        padding-left: 0%;
-        padding-right: 0%; */
-
-        /* margin-bottom: 10%;
-        margin-bottom: 40%; */
-
-        
+        justify-content: space-evenly;  
     }
 
 
@@ -2365,27 +2251,15 @@
 @media (min-width: 1800px) {
 
     #service-intro {
-        height: 75vh;
-        height: 85vh;
+        /* height: 75vh;
+        height: 85vh; */
         height: 845px;
-        /* height: 1116.05px; */
-        
-        /* height: 832px; */
         width: 100%;
         display: flex;
         flex-direction: column;
-    
-        /* if would like to use services images remove the justify center below*/
-    
-        /* justify-content: center; */
         align-items: center;
-    
-    
-        /* background-color: rgb(216, 255, 215); */
-        /* background-color: rgb(233, 214, 152); */
-        /* background-color: rgb(224, 183, 94); */
         background-color: rgb(253, 253, 213);
-        background-color: orange;
+        /* background-color: orange; */
         
     
     }
@@ -2395,17 +2269,6 @@
         justify-content: center;
         align-items: flex-start;
         justify-content: space-evenly;
-        /* height: 20%;
-        width: 100%;
-
-        padding-top: 0%;
-        padding-left: 0%;
-        padding-right: 0%; */
-
-        /* margin-bottom: 10%;
-        margin-bottom: 40%; */
-
-        
     }
 
 
@@ -2477,21 +2340,6 @@
     }
     
     @keyframes growTree {
-        /* from {
-            background-image: url("../images/growing_tree_1.5.png");
-            background-size: cover;
-        }
-    
-        50% {
-            background-image: url("../images/growing_tree_2.5.png");
-            background-size: cover;
-        }
-    
-        to {
-            background-image: url("../images/growing_tree_4.5.png");
-            background-size: cover;
-        } */
-    
         10% {
             background-image: url("../images/growing_tree_1.5.png");
     
