created new build and changed css in about page and homepage. Now have colors indicating screen sizes on homepage this is temp change

--- a/client/src/css/Homepage.css
+++ b/client/src/css/Homepage.css
@@ -54,7 +54,7 @@
     align-items: center;
     
 
-    height: 80vh;
+    /* height: 80vh; */
     height: 534px;
     width: 100%;
     background-image: url("../images/simple_life_11.jpg"), url("../images/simple_life_06.jpg");
@@ -70,7 +70,9 @@
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     letter-spacing: 8px;
     background-position: center;
-    background-attachment: fixed;
+
+    /* removed fixed background to check if image is not zoomed in on in live site */
+    /* background-attachment: fixed; */
     
 }
 
@@ -137,6 +139,8 @@
     padding: 1%;
     
     /* font-style: italic; */
+    padding-left: 5%;
+    padding-right: 5%;
     margin-bottom: 2%;
 }
 
@@ -337,11 +341,10 @@
     justify-content: end;
     
     height: 30%;
-    width: 100%;
+    width: fit-content;
     font-size: 1.5em;
     text-align: center;
-    /* text-align: left; */
-    /* font-family:Verdana, Geneva, Tahoma, sans-serif; */
+
     
 }
 
@@ -725,7 +728,7 @@
 
 
 
-@media (max-width: 450px) {
+@media (max-width: 451px) {
 
     #home-content-container2 {
         display: flex;
@@ -739,7 +742,7 @@
         height: 750.2px;
         
         position: relative;
-        background-color: blue;
+        background-color: red;
     }
 
     #content2-description {
@@ -755,7 +758,7 @@
         
         height: fit-content;
         padding-top: 5%;
-        width: 150%;
+        width: fit-content;
         font-size: 1.2em;
         text-align: center;
         /* text-align: left; */
@@ -846,6 +849,7 @@
         height: 750.2px;
         
         position: relative;
+        background-color: blue;
         
     }
 
@@ -862,7 +866,7 @@
         
         height: fit-content;
         padding-top: 5%;
-        width: 150%;
+        width: fit-content;
         font-size: 1.2em;
         text-align: center;
         /* text-align: left; */
@@ -940,6 +944,10 @@
 
 @media (min-width: 600px) {
 
+    #home-content-container2 {
+        background-color: rgb(34, 135, 194);
+    }
+
     #hiddenMobileNav {
         
         position: absolute;
@@ -990,7 +998,7 @@
         /* height: 80vh; */
         height: 640px;
         width: 100%;
-        background-attachment: fixed;
+        /* background-attachment: fixed; */
     
         
     }
@@ -1002,7 +1010,6 @@
     #home-content-container1 {
         margin-top: 15%;
         position: relative;
-        /* background-color: blue; */
         display: flex;
         flex-direction: column;
     }
@@ -1336,6 +1343,7 @@
         height: 900px;
         
         position: relative;
+        background-color: green;
     }
 
     #content2-image {
@@ -1814,6 +1822,7 @@
     
     position: relative;
     /* border: 1px solid blue; */
+    background-color: blueviolet;
     
 }
 
@@ -2640,6 +2649,7 @@
         
         position: relative;
         /* border: 1px solid blue; */
+        background-color: aqua;
         
     }
     
