--- a/client/src/css/About.css
+++ b/client/src/css/About.css
@@ -82,10 +82,11 @@
 
     gap: 5%;
     height: 60%;
-    
+    height: fit-content;
     width: 100%;
-    
-    margin-bottom: 35%;
+    /* margin-bottom: 33%; */
+    margin-bottom: 20%;
+
 }
 
 #aboutPage-top-row {
@@ -95,15 +96,17 @@
     align-items: center;
     height: 694px;
     height: 950px;
+    height: fit-content;
     gap: 20px;
     width: 93%;
-    
+    /* background-color: red; */
 }
 
 #about-Owen {
     display: flex;
     flex-direction: column;
     height: 300px;
+    height: fit-content;
     width: 93%;
     letter-spacing: 2px;
     /* background-color: rgb(168, 168, 214); */
@@ -111,6 +114,7 @@
 }
 
 #about-Owen-Title {
+    margin-top: 5%;
     font-size: 16pt;
     
 }
@@ -118,13 +122,14 @@
 #about-Owen-Title-2 {
     margin-top: 2%;
     font-size: 15pt;
-    font-style: italic;
 }
 
 #about-Owen p {
+    
     font-size: 18px;
-    margin-top: 3%;
-    padding-right: 10%;
+    margin-top: 5%;
+    padding-left: 2%;
+    padding-right: 2%;
 }
 
 
@@ -135,22 +140,29 @@
     gap: 5%;
     /* height: 50%; */
     height: 384px;
+    height: fit-content;
     width: 98%;
     background-color: rgb(231, 223, 212);
 }
 
 #aboutWork-Text-1 {
     padding-top: 10%;
+    height: fit-content;
     width: 100%;
     text-align: center;
     font-weight: bold;
     font-size: 22pt;
+    /* background-color: aqua; */
 }
 
 #aboutWork-Text-2 {
-    margin-top: 5%;
+    /* background-color: green; */
+    margin-top: 0%;
+    padding-top: 10%;
     padding-left: 10%;
     padding-right: 10%;
+    padding-bottom: 10%;
+    height: fit-content;
     width: 100%;
     text-align: center;
     font-size: 14.5pt;
@@ -188,9 +200,11 @@
 
 #about-Goal {
     padding-top: 10%;
+    padding-bottom: 10%;
     height: 50%;
     margin-top: 7%;
     height: 384px;
+    height: fit-content;
     width: 93%;
     display: flex;
     flex-direction: column;
@@ -201,7 +215,8 @@
 #aboutPage-Text-1 {
     width: 45%;
     width: 100%;
-    
+    padding-left: 5%;
+    padding-right: 5%;
     text-align: center;
     font-weight: bold;
     /* font-size: 25pt; */
@@ -211,7 +226,9 @@
 }
 
 #aboutPage-Text-2 {
-    margin-top: 3%;
+    margin-top: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
     text-align: center;
     width: 45%;
     width: 100%;
@@ -223,7 +240,9 @@
 }
 
 #aboutPage-Text-3 {
-    margin-top: 3%;
+    margin-top: 5%;
+    padding-left: 2%;
+    padding-right: 2%;
     text-align: center;
     width: 45%;
     width: 100%;
@@ -236,7 +255,7 @@
 }
 
 #aboutPage-Text-4 {
-    margin-top: 2%;
+    margin-top: 5%;
     text-align: center;
     width: 45%;
     width: 100%;
@@ -247,6 +266,7 @@
 }
 
 #aboutPage-Text-5 {
+    margin-top: 2%;
     text-align: center;
     width: 45%;
     width: 100%;
@@ -277,7 +297,7 @@
     #about-Work {
         
         height: 550px;
-       
+        height: fit-content;
         
     }
     
@@ -286,9 +306,8 @@
 
 @media (min-width: 451px) {
     #aboutPage-top-row {
-       
-        gap: 30px;
-        
+        gap: 50px;
+        background-color: blue;
     } 
 
     #aboutPage-Content1 {
@@ -303,6 +322,7 @@
 
     #about-Work {
         height: 550px;
+        height: fit-content;
     }
     
 }
@@ -320,15 +340,31 @@
         
     }
 
+    #aboutPage-top-row {
+        background-color: rgb(106, 106, 192);
+    } 
     
 }
 
 @media (min-width: 768px) {
     #aboutPage-top-row {
-       
-        gap: 20px;
+        gap: 40px;
         
     } 
+
+    #aboutWork-Text-2 {
+        margin-top: 0%;
+        padding-top: 5%;
+        padding-left: 6%;
+        padding-right: 6%;
+        padding-bottom: 15%;
+        height: fit-content;
+        width: 100%;
+        text-align: center;
+        font-size: 14.5pt;
+    
+        letter-spacing: 1.5px;
+    }
 }
 
 @media (min-width: 992px) {
@@ -364,7 +400,7 @@
         align-items: center;
         /* height: 90vh; */
         height: fit-content;
-        height: 2000px;
+        /* height: 2000px; */
         width: 100%;
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         letter-spacing: 3px;
@@ -400,7 +436,7 @@
 
         position: relative;
         margin-top: 5%;
-        height: 80%;
+        /* height: 80%; */
         height: fit-content;
         width: 100%;
         
@@ -413,8 +449,10 @@
         justify-content: center;
         align-items: flex-start;
         height: 400px;
-        gap: 20px;
+        height: fit-content;
+        gap: 40px;
         width: 93%;
+        background-color: rgb(16, 16, 133);
     }
 
     #about-Owen {
@@ -427,6 +465,7 @@
         width: 50%;
 
         height: 350px;
+        height: 100%;
         background-color: rgb(231, 223, 212);
         
         /* width: 500px; */
@@ -439,12 +478,18 @@
         font-size: 22pt;
     }
 
+    #about-Owen-Title-2 {
+        padding-left: 4%;
+        padding-right: 4%;
+    }
+
     #about-Owen p {
         text-align: center;
         font-size: 18px;
         margin-top: 3%;
         padding-left: 10%;
         padding-right: 10%;
+        padding-bottom: 10%;
     }
     
     #about-Work {
@@ -456,12 +501,15 @@
         height: 100%;
         width: 50%;
 
-        height: 350px;
+        /* height: 350px; */
+        height: 100%;
         background-color: rgb(231, 223, 212);
         
     }
     
     #aboutWork-Text-1 {
+        margin-top: 5%;
+        padding-top: 10%;
         width: 100%;
         text-align: center;
         font-weight: bold;
@@ -469,10 +517,13 @@
     }
     
     #aboutWork-Text-2 {
+        padding-left: 10%;
+        padding-right: 10%;
+        padding-bottom: 22%;
         width: 100%;
         text-align: center;
-        font-size: 13pt;
-    
+        font-size: 18px;
+        
         letter-spacing: 1.5px;
     }
 
@@ -495,15 +546,14 @@
     }
     
     #about-Goal {
-        height: 50%;
-
         display: flex;
         flex-direction: column;
         /* background-color: red; */
         gap: 5%;
         padding-left: 10%;
         padding-right: 10%;
-        height: 400px;
+        /* height: 400px; */
+        height: fit-content;
     }
     #aboutPage-Text-1 {
 
@@ -513,18 +563,20 @@
         text-align: center;
         font-weight: bold;
         /* font-size: 25pt; */
-        font-size: 22pt;
+        font-size: 25pt;
     
         letter-spacing: 1.5px;
     }
     
     #aboutPage-Text-2 {
         margin-top: 3%;
+        padding-left: 1%;
+        padding-right: 1%;
         text-align: center;
-        width: 45%;
+        /* width: 45%; */
         width: 100%;
         /* background-color: aqua; */
-        font-size: 15pt;
+        font-size: 17pt;
     
         letter-spacing: 1.5px;
     
@@ -585,7 +637,7 @@
         /* height: 90vh; */
         height: fit-content;
         /* height: 2000px; */
-        height: 2500px;
+        /* height: 2500px; */
         width: 100%;
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         letter-spacing: 3px;
@@ -602,6 +654,17 @@
         /* background-color: blue; */
         background-color: rgb(126, 126, 139);
         
+    }
+
+    #aboutPage-Content2 {
+        
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+        height: fit-content;
+        gap: 15%;
+        width: 100%;
     }
 
     #aboutPage-Img-Container {
@@ -622,8 +685,10 @@
         flex-direction: row;
         justify-content: center;
         align-items: flex-start;
-        height: 460px;
-        gap: 20px;
+        /* height: 460px; */
+        
+        height: fit-content;
+        gap: 40px;
         width: 93%;
         
     }
@@ -636,9 +701,7 @@
        
         height: 100%;
         width: 50%;
-
-        /* height: 350px; */        
-        /* width: 500px; */
+        
         
     }
 
@@ -651,7 +714,20 @@
         height: 100%;
         width: 50%;
         
+        
 
+    }
+
+
+    #aboutWork-Text-2 {
+        padding-left: 10%;
+        padding-right: 10%;
+        padding-bottom: 16%;
+        width: 100%;
+        text-align: center;
+        font-size: 18px;
+        
+        letter-spacing: 1.5px;
     }
 
     #aboutPageBanner {
@@ -659,7 +735,8 @@
         justify-content: center;
         align-items: center;
         height: 800px;
-        margin-top: 3%;
+        margin-top: 8%;
+        margin-bottom: 8%;
 
     }
 
