--- a/client/src/css/Homepage.css
+++ b/client/src/css/Homepage.css
@@ -712,9 +712,37 @@
     font-size: 1.1em;
 }
 
+#footer div:first-child{
+        
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    letter-spacing: 1.8px;
+    color: white;
+    font-size: 12px;
+    width: 90%;
+    margin-top: 3%;
+    text-align: center;
+    
+}
 
+.footer-sections a {
+    color: white;
+    font-size: 14px;
+    
+}
 
+.footer-sections {
+    width: 90%;
+    background-color: rgba(0, 0, 0, 0.055);
+}
 
+#footer div:last-child {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    letter-spacing: 1.8px;
+    color: white;
+    font-size: 12px;
+    width: 90%;
+    
+}
 
 
 
@@ -1194,6 +1222,36 @@
         height: 50vh;
         display: flex;
         flex-direction: column;
+        
+    }
+
+    #footer div:first-child{
+        
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        letter-spacing: 1.8px;
+        color: white;
+        font-size: 14px;
+        width: 90%;
+        margin-top: 3%;
+        
+    }
+    
+    .footer-sections a {
+        color: white;
+        
+    }
+
+    .footer-sections {
+        width: 90%;
+        background-color: rgba(0, 0, 0, 0.055);
+    }
+    
+    #footer div:last-child {
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        letter-spacing: 1.8px;
+        color: white;
+        font-size: 14px;
+        width: 90%;
         
     }
 
@@ -2126,7 +2184,7 @@
 }
 
 
-#services-desc button {
+#services-desc #view-service-button {
     background: none;
     outline: 0;
     border: 1px solid white;
@@ -2136,9 +2194,14 @@
     color: white;
     
     border-radius: 50px;
+
+    
+    text-decoration: none;
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-#services-desc button:hover {
+#services-desc #view-service-button:hover {
     background-color: white;
     color: rgb(140, 190, 120);
 }
@@ -2335,15 +2398,16 @@
 }
 
 #footer {
-    /* height: 30vh; */
     height: 230px;
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    /* justify-content: center; */
-    align-items: center;
+    align-items: flex-start;
+    padding-top: 2%;
     background-color: rgb(103, 139, 92);
+    
+    
 }
 
 .footer-sections {
@@ -2351,13 +2415,50 @@
     flex-direction: column;
     justify-content: space-evenly;
     height: 70%;
-    
+    width: 33%;
     align-items: center;
+    background-color: rgba(255, 255, 255, 0);
 }
 
 .footer-sections span, a {
     display:block;
     font-size: 1.1em;
+}
+
+
+#footer div:first-child{
+    display: flex;
+    align-items: flex-start;
+
+    margin-top: 0%;
+    margin-left: 2%;
+    padding-left: 4%;
+
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    letter-spacing: 1.8px;
+    color: white;
+    font-size: 14px;
+    background-color: rgba(0, 0, 0, 0.055);
+    width: 33%;
+    text-align: left;
+}
+
+.footer-sections a {
+    color: white;
+    
+}
+
+#footer div:last-child {
+    display: flex;
+    align-items: flex-end;
+    margin-right: 2%;
+    padding-right: 4%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    letter-spacing: 1.8px;
+    color: white;
+    font-size: 14px;
+    background-color: rgba(0, 0, 0, 0.055);
+    width: 33%;
 }
     
 }
@@ -3160,28 +3261,60 @@
     
     #footer {
         /* height: 30vh; */
-        height: 230px;
+        height: 350px;
         width: 100%;
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
         /* justify-content: center; */
-        align-items: center;
+        align-items: flex-start;
         background-color: rgb(103, 139, 92);
+        
+        
     }
     
     .footer-sections {
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
-        height: 70%;
-        
+        height: 60%;
+        width: 33%;
         align-items: center;
     }
     
     .footer-sections span, a {
         display:block;
         font-size: 1.1em;
+    }
+
+    #footer div:first-child{
+        display: flex;
+        align-items: flex-start;
+        margin-left: 2%;
+        padding-left: 4%;
+    
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        letter-spacing: 1.8px;
+        color: white;
+        font-size: 14px;
+        background-color: rgba(0, 0, 0, 0.055);
+        
+    }
+    
+    .footer-sections a {
+        color: white;
+    }
+    
+    #footer div:last-child {
+        display: flex;
+        align-items: flex-end;
+        margin-right: 2%;
+        padding-right: 4%;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        letter-spacing: 1.8px;
+        color: white;
+        font-size: 14px;
+        background-color: rgba(0, 0, 0, 0.055);
     }
         
     }
