--- a/client/src/css/About.css
+++ b/client/src/css/About.css
@@ -183,7 +183,7 @@
     
 }
 
-#aboutPageBanner button {
+#aboutPageBanner #aboutPage-banner-button {
     margin-top: 15%;
     height: 70px;
     width: 200px;
@@ -191,9 +191,17 @@
     background-color: rgb(241, 104, 22);
     color: white;
     font-size: 15pt;
+
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    letter-spacing: normal;
+    text-decoration: none;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-#aboutPageBanner button:hover {
+#aboutPageBanner #aboutPage-banner-button:hover {
     cursor: pointer;
     background-color: rgb(245, 141, 81);
 }
@@ -534,7 +542,7 @@
 
     }
 
-    #aboutPageBanner button {
+    #aboutPageBanner #aboutPage-banner-button {
         margin-top: 0%;
         margin-right: 5%;
         height: 70px;
@@ -543,6 +551,15 @@
         background-color: rgb(241, 104, 22);
         color: white;
         font-size: 15pt;
+
+        /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        letter-spacing: normal;
+        text-decoration: none;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center; */
+        
     }
     
     #about-Goal {
