--- a/client/src/css/Services.css
+++ b/client/src/css/Services.css
@@ -569,9 +569,6 @@
 
 
 .service1 {
-    /* border: 3px solid blue; */
-    
-
     height: 50%;
     height: fit-content;
     height: 100%;
@@ -621,7 +618,7 @@
     
 }
 
-.service1 button {
+.service1 .service-1-button {
     
     
     margin-top: 10%;
@@ -635,10 +632,15 @@
     font-size: 14pt;
     border-radius: 5px;
 
-    
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
 }
 
-.service1 button:hover {
+.service1 .service-1-button:hover {
     cursor: pointer;
     background-color: rgb(103, 139, 92);
     color: white;
@@ -683,14 +685,6 @@
     }
     
     .service-img {
-        /* margin-top: 2%;
-        display: flex;
-        justify-content: center;
-        align-items: center; */
-        /* height: 50%;
-        width: 20%;
-        width: 15%; */
-
         height: 60%;
         width: 20%;
         border: 5px solid rgb(228, 195, 171);
@@ -727,7 +721,6 @@
         height: 35.8px;
         right: 0;
         width: 35.5%;
-        /* border-left: 3px solid rgb(82, 60, 36); */
         background-color: rgba(0, 0, 0, 0);
         background-image: url(../images/fence_processed-rightside.png);
         background-size: contain;
@@ -743,7 +736,7 @@
     .service1-content {
         height: 33%;
         width: 100%;
-        border: 2px solid blue;
+        /* border: 2px solid blue; */
         display: flex;
         flex-direction: column;
         margin-bottom: 3%;
@@ -758,13 +751,9 @@
     .service1 {
         height: 50%;
     
-        /* background-color: red; */
-    
         width: fit-content;
         display: flex;
         flex-direction: column;
-        /* justify-content: center; */
-        /* align-items: center; */
         margin-left: 2%;
     }
 
@@ -775,7 +764,6 @@
 
 
         position: absolute;
-        /* top: -275%; */
         top: -235%;
         
 
@@ -1029,7 +1017,7 @@
         
         display: flex;
         
-        height: 800px;
+        height: 890px;
     }
 
     #service-images {
@@ -1524,10 +1512,9 @@
         display: flex;
         justify-content: center;
         justify-content: space-evenly;
-        /* gap: 1%; */
+       
         height: 35%;
         width: 100%;
-        /* border: 1px solid black; */
     
         padding-top: 1%;
         padding-left: 1%;
@@ -1545,23 +1532,14 @@
         justify-content: center;
         align-items: center;
         height: 80%;
-        /* width: 32%; */
         width: 10%;
-        background-color: yellow;
         background-color: rgb(255, 255, 255);
-        /* border-radius: 50%; */
         box-shadow: 0px 0px 10px 0px black;
-    
-        /* border-bottom: 10px solid saddlebrown; */
-    
         border: 15px solid rgb(228, 195, 171);
-        
-        /* box-shadow: 0px 0px 11px 15px rgb(228, 195, 171); */
     }
     
     .service-img:hover {
         cursor: pointer;
-        /* box-shadow: 0 0 20px rgb(8, 70, 8); */
         
     }
     
@@ -1581,24 +1559,12 @@
         justify-content: center;
         align-items: center;
         height: 60%;
-        /* width: 32%; */
         width: 10%;
         
         
         background-color: rgb(218, 199, 147);
         background: radial-gradient(rgb(218, 199, 147), rgba(218, 199, 147, 0.411), rgba(218, 199, 147, 0.089));
-        
-        box-shadow: 0px 0px 10px 0px black;
-        box-shadow: 0px 14px 55px rgba(0, 0, 0, 0.35);
-        box-shadow: 0px 14px 55px rgba(9, 48, 18, 0.911);
         box-shadow: none;
-    
-        /* border-bottom: 10px solid saddlebrown; */
-    
-        border: 15px solid rgba(228, 195, 171, 0);
-        /* border-radius: 30px;
-        border-radius: 50%; */
-        border: 5px solid rgb(66, 124, 27);
         border: 3px solid rgb(165, 122, 42);
         background-color: rgb(103, 139, 92);
        
@@ -1606,15 +1572,10 @@
     
     .service-img:hover {
         cursor: pointer;
-        /* box-shadow: 0 0 20px rgb(8, 70, 8); */
         
     }
     
     .service-img img {
-        /* border-radius: 50%; */
-        /* height: 90%;
-        width: 80%; */
-    
         height: 100%;
         width: 100%;
         background-size: contain;
@@ -1656,12 +1617,9 @@
     #fence-container {
         position: absolute;
         top: -300%;
-        /* height: 8vh; */
         height: 59.2px;
         left: 0;
-        width: 30.50%;
         width: 32.2%;
-        /* border-right: 3px solid rgb(82, 60, 36); */
         background-color: rgba(0, 0, 0, 0);
         background-image: url(../images/fence_processed2.png);
         background-size: contain;
@@ -1670,41 +1628,22 @@
     #fence-container-rightside {
         position: absolute;
         top: -300%;
-        /* height: 8vh; */
         height: 59.2px;
         right: 0;
         width: 35.5%;
-        /* border-left: 3px solid rgb(82, 60, 36); */
         background-color: rgba(0, 0, 0, 0);
         background-image: url(../images/fence_processed-rightside.png);
         background-size: contain;
     }
     
     #servicePageBreak {
-        
-        /* width: 90%;
-        height: 5%;
-        background-color: black;
-        background-color: rgb(43, 104, 28); */
         position: relative;
-        margin-top: 4.5%;
-    
-        /* Will need to add this margin for all pageBreaks if desired */
         margin-top: 10%;
-    
-        /* this 10 percent one */
-    
-        width: 80%;
-        height: 0.2%;
-        background-color: black;
-        background-color: rgb(43, 104, 28);
-        /* background-image: url("https://www.publicdomainpictures.net/pictures/410000/nahled/grass-background-clipart.png"); */
-        background-image: url(../images/background_grass.png);
-        
-        background-size: contain;
         height: 3%;
-    
-    
+        width: 80%;
+        background-color: rgb(43, 104, 28);
+        background-image: url(../images/background_grass.png);
+        background-size: contain;
     }
     
     
@@ -1824,18 +1763,12 @@
     
     #servicePageBreakSnow {
         position: relative;
-        margin-top: 4.5%;
         margin-top: 10%;
-        width: 80%;
-        height: 0.2%;
-        background-color: black;
-        background-color: rgb(255, 255, 255);
-        
-        /* border: 3px solid rgb(173, 173, 229); */
-    
-     
-        border-radius: 0px;
         height: 3%;
+        width: 80%;
+        background-color: rgb(255, 255, 255);
+        border-radius: 0px;
+        
     
     
     }
@@ -1993,11 +1926,7 @@
     #servicePageBreak2 {
         width: 80%;
         height: 8%;
-        /* border-radius: 10px; */
-        background-color: black;
-        background-color: rgb(104, 80, 28);
         background-color: rgb(156, 97, 54);
-        /* background-image: url("https://img.freepik.com/free-vector/brown-soil-texture-background_1308-20483.jpg"); */
         background-image: url(../images/background_dirt.avif);
         background-size: contain;
     }
@@ -2005,12 +1934,7 @@
     #servicePageBreakSnow2 {
         width: 80%;
         height: 8%;
-        /* border-radius: 10px; */
-        background-color: black;
-        background-color: rgb(104, 80, 28);
-        background-color: rgb(156, 97, 54);
         background-color: rgb(173, 173, 229);
-        /* background-image: url("https://previews.123rf.com/images/scaliger/scaliger1912/scaliger191200083/136806983-background-of-snow-texture-plain-snowy-pure-landscape-scene-of-white-surface-in-winter-bright-fresh.jpg"); */
         background-image: url("../images/background_snow.jpg");
         background-size: contain;
     }
@@ -2093,22 +2017,14 @@
     }
     
     .service1 {
-        /* border: 3px solid blue; */
         
     
-        height: 50%;
-        height: fit-content;
+        
         height: 100%;
-    
-        /* background-color: red; */
-    
-        width: fit-content;
         width: 25%;
         
         display: flex;
         flex-direction: column;
-        /* justify-content: center; */
-        /* align-items: center; */
         margin-left: 2%;
     }
     
@@ -2145,7 +2061,7 @@
         
     }
     
-    .service1 button {
+    .service1 .service-1-button {
         
         
         margin-top: 10%;
@@ -2159,10 +2075,15 @@
         font-size: 14pt;
         border-radius: 5px;
     
-        
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-decoration: none;
     }
     
-    .service1 button:hover {
+    .service1 .service-1-button:hover {
         cursor: pointer;
         background-color: rgb(103, 139, 92);
         color: white;
