set up form resets after messages are sent in both homepage and contact pages

--- a/client/src/css/Homepage.css
+++ b/client/src/css/Homepage.css
@@ -667,12 +667,17 @@
     border: none;
     transition: .2s;
     letter-spacing: 2px;
-
     
     
 }
 
+ #button-submitted-style {
+    background-color: rgb(94, 165, 72);
+    color: white;
+}
+
 #form-container button:hover {
+    cursor: pointer;
     background-color: rgb(200, 200, 200);
 }
 
