--- a/client/src/css/Services.css
+++ b/client/src/css/Services.css
@@ -638,6 +638,7 @@
     justify-content: center;
     align-items: center;
     text-decoration: none;
+    color: black;
 }
 
 .service1 .service-1-button:hover {
